fixed margin causing horizontal scrollbar to show on rowdoc

--- a/public/stylesheets/_dimensions.styl
+++ b/public/stylesheets/_dimensions.styl
@@ -3,6 +3,7 @@
 
   .documentation {
     min-height: 100%
+    margin: 0
 
     & > * {
       min-height: 100%
